--- a/SpringWeb_Module8/src/main/resources/spring-frontend/profile.html
+++ b/SpringWeb_Module8/src/main/resources/spring-frontend/profile.html
@@ -1,223 +1,199 @@
-
-<!--END-->
-<!--END--><!DOCTYPE html><!--[if IE 7]>
-<html class="ie7" lang="ru">
-<![endif]-->
-<!--[if IE 8]>
-<html class="ie8" lang="ru">
-<![endif]-->
-<!--[if IE 9]>
-<html class="ie9" lang="ru">
-<![endif]-->
-<!--[if gt IE 9]><!--> <html lang="ru">
-<!--<![endif]--> <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Тут название страницы написать</title>
-  <meta name="description" content="Описание страницы">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <meta content="Описание страницы" name="description"/>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" name="viewport"/>
   <!--meta( http-equiv="cache-control" content="no-cache")-->
   <!--meta( http-equiv="expires" content="0")-->
   <!--link(rel="preload" href="assets/css/extra.min.css?v=" + version as="style" crossorigin="anonymous")-->
-  <link href="/favicon.ico" rel="shortcut icon">
-  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" as="font" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assets/css/fonts.min.css?v=45744385">
-  <link rel="stylesheet" href="/assets/css/basic.min.css?v=45744385">
-  <link rel="stylesheet" href="/assets/css/extra.min.css?v=45744385"><!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  <script defer src="/assets/js/scripts.min.js?v=45744385"></script>
+  <link href="/favicon.ico" rel="shortcut icon"/>
+  <link as="font" crossorigin="anonymous" href="/assets/fonts/Montserrat/Montserrat-SemiBold.woff2" rel="preload"/>
+  <link as="font" crossorigin="anonymous" href="/assets/fonts/Montserrat/Montserrat-Light.woff2" rel="preload"/>
+  <link as="font" crossorigin="anonymous" href="/assets/fonts/Montserrat/Montserrat-Medium.woff2" rel="preload"/>
+  <link as="font" crossorigin="anonymous" href="/assets/fonts/Montserrat/Montserrat-ExtraBold.woff2" rel="preload"/>
+  <link href="/assets/css/fonts.min.css?v=45744385" rel="stylesheet"/>
+  <link href="/assets/css/basic.min.css?v=45744385" rel="stylesheet"/>
+  <link href="/assets/css/extra.min.css?v=45744385" rel="stylesheet"/>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="/assets/js/scripts.min.js?v=45744385"></script>
 </head>
 <body class="Site">
-  <!--if lt IE 8
-  p.error-browser
-      | Ваш браузер&nbsp;
-      em устарел!&nbsp;
-      a(href="http://browsehappy.com/") Выберите новую версию
-          +s
-          | браузера здесь&nbsp;
-      | для правильного отображения сайта.
-  -->
 
-  <header th:replace="~{fragments/header_fragment_NoNav :: headFragment}"></header>
-  <div class="Middle">
-    <div class="Middle-top">
-      <div class="wrap">
-        <h1 class="Middle-title">Личный кабинет
-        </h1>
-      </div>
-    </div>
+
+<header th:replace="~{fragments/header_fragment_NoNav :: headFragment}"></header>
+<div class="Middle">
+  <div class="Middle-top">
     <div class="wrap">
-      <main class="Middle-main">
-        <h2 class="Middle-title">Мой профиль
-        </h2>
-        <div class="Tabs Tabs_default">
-          <!--+Tabs-links([-->
-          <!--    ['#basic', 'Основные сведения'],-->
-          <!--    ['#transactions','История транзакций'],-->
-          <!--    ['#topup','Пополнить счет']-->
-          <!--], 'text', 0)-->
-          <div class="Tabs-links">
-            <a class="Tabs-link Tabs-link_ACTIVE" href="#basic">Основные сведения</a>
-            <a class="Tabs-link" href="#transactions">История транзакций</a>
-            <a class="Tabs-link" href="#topup">Пополнить счет</a>
-          </div>
-          <div class="Tabs-wrap">
-            <div class="Tabs-block" id="basic">
-              <div class="Profile">
-                <form class="form Profile-form" th:action="@{/profile}" action="#" method="post">
-                  <div class="row">
-                    <div class="row-block">
-                      <div class="form-group">
-                        <label class="form-label" for="name">Имя
-                        </label>
-                        <input class="form-input" id="name" name="name" type="text" value="Михаил" th:value="${curUsr.getName()}"/>
-                      </div>
-                      <div class="form-group">
-                        <label class="form-label" for="mail">E-mail
-                        </label>
-                        <input class="form-input" id="mail" name="mail" type="text" value="addr@sait.com" th:value="${curUsr.getEmail()}" data-validate="require mail"/>
-                        <div class="Profile-btn Profile-btn_confirm">
-                          <button class="btn btn_primary" type="button">Подтвердить
-                          </button>
-                        </div>
-                      </div>
-                      <div class="form-group">
-                        <label class="form-label" for="phone">Телефон
-                        </label>
-                        <input class="form-input" id="phone" name="phone" type="text" value="+70000000000" th:value="${curUsr.getPhone()}" data-mask="+7 (999) 999-99-99" data-validate="require"/>
-                        <div class="Profile-btn Profile-btn_confirm">
-                          <button class="btn btn_primary" type="button">Подтвердить
-                          </button>
-                        </div>
+      <h1 class="Middle-title">Личный кабинет
+      </h1>
+    </div>
+  </div>
+  <div class="wrap">
+    <main class="Middle-main">
+      <h2 class="Middle-title">Мой профиль
+      </h2>
+      <div class="Tabs Tabs_default">
+
+        <div class="Tabs-links">
+          <a class="Tabs-link Tabs-link_ACTIVE" href="#basic">Основные сведения</a>
+          <a class="Tabs-link" href="#transactions">История транзакций</a>
+          <a class="Tabs-link" href="#topup">Пополнить счет</a>
+        </div>
+        <div class="Tabs-wrap">
+          <div class="Tabs-block" id="basic">
+            <div class="Profile">
+              <form action="#" class="form Profile-form" method="post" th:action="@{/profile}">
+                <div class="row">
+                  <div class="row-block">
+                    <div class="form-group">
+                      <label class="form-label" for="name">Имя
+                      </label>
+                      <input class="form-input" id="name" name="name" th:value="${curUsr.getName()}" type="text"
+                             value="Михаил"/>
+                    </div>
+                    <div class="form-group">
+                      <label class="form-label" for="mail">E-mail
+                      </label>
+                      <input class="form-input" data-validate="require mail" id="mail" name="mail" th:value="${curUsr.getEmail()}"
+                             type="text" value="addr@sait.com"/>
+                      <div class="Profile-btn Profile-btn_confirm">
+                        <button class="btn btn_primary" type="button">Подтвердить
+                        </button>
                       </div>
                     </div>
-                    <div class="row-block">
-                      <div class="form-group">
-                        <label class="form-label" for="password">Пароль
-                        </label>
-                        <input class="form-input" id="password" name="password" type="password" placeholder="Тут можно изменить пароль"/>
-                      </div>
-                      <div class="form-group">
-                        <label class="form-label" for="passwordReply">Подтверждение пароля
-                        </label>
-                        <input class="form-input" id="passwordReply" name="passwordReply" type="password" placeholder="Введите пароль повторно"/>
-                      </div>
-                      <div class="form-group">
-                        <div class="Profile-btn">
-                          <button class="btn btn_danger" type="button">Отменить
-                          </button>
-                          <button class="btn btn_primary" type="submit">Сохранить
-                          </button>
-                        </div>
-                        <div class="Profile-success"
-                             th:if="${updated!=null}"
-                             th:text="${error!=null? error : 'Профиль успешно сохранен'}"
-                             th:style="${error!=null? 'color: red' : 'color: #2aa73a'}">Профиль успешно сохранен
-                        </div>
+                    <div class="form-group">
+                      <label class="form-label" for="phone">Телефон
+                      </label>
+                      <input class="form-input" data-mask="+7 (999) 999-99-99" data-validate="require" id="phone" name="phone"
+                             th:value="${curUsr.getPhone()}" type="text" value="+70000000000"/>
+                      <div class="Profile-btn Profile-btn_confirm">
+                        <button class="btn btn_primary" type="button">Подтвердить
+                        </button>
                       </div>
                     </div>
                   </div>
-                </form>
-              </div>
-            </div>
-            <div class="Tabs-block" id="transactions">
-              <div class="Transactions">
-                <div class="tableWrap">
-                  <table class="table table_noMargin">
-                    <thead>
-                      <tr>
-                        <th>Дата и время
-                        </th>
-                        <th>Сумма
-                        </th>
-                        <th>Описание
-                        </th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td>15 мая 2017 10:03
-                        </td>
-                        <td><span class="Transactions_textSuccess">
-                            <strong>+500 р.
-                            </strong></span>
-                        </td>
-                        <td>Пополнение счета
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>5 марта 2017 13:40
-                        </td>
-                        <td><span class="Transactions_textSuccess">
-                            <strong>-480 р.
-                            </strong></span>
-                        </td>
-                        <td>Покупка книги&#32;<a href="/books/slug.html">История Беларуси</a>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>1 февраля 2017 04:10
-                        </td>
-                        <td><span class="Transactions_textSuccess">
-                            <strong>+10 000 р.
-                            </strong></span>
-                        </td>
-                        <td>Пополнение с помощью WebMoney
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>1 января 2017 09:33
-                        </td>
-                        <td><span class="Transactions_textSuccess">
-                            <strong>+7 896 р.
-                            </strong></span>
-                        </td>
-                        <td>Пополнение с помощью Яндекс.Деньги
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-                <div class="Transactions-footer Transactions-footer_center"><a class="btn btn_primary Transactions-get" href="#" data-transactionoffset="4" data-transactionlimit="10" data-transactionsort="asc">Показать еще</a>
-                </div>
-              </div>
-            </div>
-            <div class="Tabs-block" id="topup">
-              <form class="form Topup" action="#" method="post" data-sendHash="34534535">
-                <div class="Topup-wrap">
-                  <strong class="Topup-title">Введите сумму, на которую хотите пополнить свой счет:
-                  </strong>
-                  <div class="form-group form-group_row Topup-group">
-                    <input class="form-input" id="sum" name="sum" type="text"/><span>рублей</span>
-                  </div>
-                  <div class="form-group">
-                    <div class="Topup-btn">
-                      <button class="btn btn_primary">Пополнить
-                      </button>
+                  <div class="row-block">
+                    <div class="form-group">
+                      <label class="form-label" for="password">Пароль
+                      </label>
+                      <input class="form-input" id="password" name="password" placeholder="Тут можно изменить пароль"
+                             type="password"/>
+                    </div>
+                    <div class="form-group">
+                      <label class="form-label" for="passwordReply">Подтверждение пароля
+                      </label>
+                      <input class="form-input" id="passwordReply" name="passwordReply" placeholder="Введите пароль повторно"
+                             type="password"/>
+                    </div>
+                    <div class="form-group">
+                      <div class="Profile-btn">
+                        <button class="btn btn_danger" type="button">Отменить
+                        </button>
+                        <button class="btn btn_primary" type="submit">Сохранить
+                        </button>
+                      </div>
+                      <div class="Profile-success"
+                           th:if="${updated!=null}"
+                           th:style="${error!=null? 'color: red' : 'color: #2aa73a'}"
+                           th:text="${error!=null? error : 'Профиль успешно сохранен'}">Профиль успешно сохранен
+                      </div>
                     </div>
                   </div>
                 </div>
               </form>
             </div>
           </div>
+          <div class="Tabs-block" id="transactions">
+            <div class="Transactions">
+              <div class="tableWrap">
+                <table class="table table_noMargin">
+                  <thead>
+                  <tr>
+                    <th>Дата и время
+                    </th>
+                    <th>Сумма
+                    </th>
+                    <th>Описание
+                    </th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>15 мая 2017 10:03
+                    </td>
+                    <td><span class="Transactions_textSuccess">
+                            <strong>+500 р.
+                            </strong></span>
+                    </td>
+                    <td>Пополнение счета
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>5 марта 2017 13:40
+                    </td>
+                    <td><span class="Transactions_textSuccess">
+                            <strong>-480 р.
+                            </strong></span>
+                    </td>
+                    <td>Покупка книги&#32;<a href="/books/slug.html">История Беларуси</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>1 февраля 2017 04:10
+                    </td>
+                    <td><span class="Transactions_textSuccess">
+                            <strong>+10 000 р.
+                            </strong></span>
+                    </td>
+                    <td>Пополнение с помощью WebMoney
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>1 января 2017 09:33
+                    </td>
+                    <td><span class="Transactions_textSuccess">
+                            <strong>+7 896 р.
+                            </strong></span>
+                    </td>
+                    <td>Пополнение с помощью Яндекс.Деньги
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="Transactions-footer Transactions-footer_center"><a class="btn btn_primary Transactions-get"
+                                                                             data-transactionlimit="10" data-transactionoffset="4"
+                                                                             data-transactionsort="asc"
+                                                                             href="#">Показать еще</a>
+              </div>
+            </div>
+          </div>
+          <div class="Tabs-block" id="topup">
+            <form action="#" class="form Topup" data-sendHash="34534535" method="post">
+              <div class="Topup-wrap">
+                <strong class="Topup-title">Введите сумму, на которую хотите пополнить свой счет:
+                </strong>
+                <div class="form-group form-group_row Topup-group">
+                  <input class="form-input" id="sum" name="sum" type="text"/><span>рублей</span>
+                </div>
+                <div class="form-group">
+                  <div class="Topup-btn">
+                    <button class="btn btn_primary">Пополнить
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
-      </main>
-    </div>
+      </div>
+    </main>
   </div>
-  <footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
-  <script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
-  <!--+menu(-->
-  <!--    'Это раз',-->
-  <!--    'Это два',-->
-  <!--    'Это три'-->
-  <!--)-->
-  <!--br-->
-  <!--br-->
-  <!--+menu._vt-->
-  <!--    +menuItem Это раз-->
-  <!--    +menuItem.-item_danger Это два-->
-  <!--    +menuItem Это три-->
-</body></html>
+</div>
+<footer th:replace="~{fragments/footer_fragment :: footFragment}"></footer>
+<script src="/assets/plg/jQuery/jquery-3.5.1.min.js"></script>
+
+</body>
+</html>
